[package]
name = "md"
version = "0.1.0"
authors = ["Enn Michael <enntheprogrammer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.19.0"
rand = {version = "0.8.3", features = ["small_rng"]}
